Correccion de errores

--- a/index.html
+++ b/index.html
@@ -54,13 +54,12 @@
                         </p>
                         </li>
 
-                        <li">
+                        <li>
                             <h2 class="section-one">PLANIFICACIÓN</h2>
                             <p class="description">
                             <br> Usted podrá observar y participar 
                             <br> en cada fase del desarrollo 
-                            <br> y aplicación de soluciones.
-                        </p>
+                            <br> y aplicación de soluciones.</p>
                         </li>
 
                         <li>
@@ -86,12 +85,12 @@
                         <P class="profession">Diseñador de Productos</P>
                     </li>
                     <li>
-                         <img class="images"src="images/images4.jpg" alt="second member" width="270">
+                         <img class="images" src="images/images4.jpg" alt="second member" width="270">
                         <h3 class="name">Carla Palacios</h3>
                         <P class="profession">Desarrolladora Frontend</p>
                     </li>
                     <li>
-                         <img class="images"src="images/images5.jpg" alt="third member" width="270">
+                         <img class="images" src="images/images5.jpg" alt="third member" width="270">
                         <h3 class="name">Mario Dorado</h3>
                         <P class="profession">Marketing</p>
                     </li>
