modificación de aperturas y cierres

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             </p>
                         </li>
                     </ul>
-    <main>
+                </section>            
             <h2 class="text">A qué nos dedicamos</h2>
             <img src="images/images.jpg" alt="Image locating WebStudio development" width="270">"
             <img src="images/images1.jpg" alt="Image demonstrating the development of our programmers in the mobile aspect" width="270">
@@ -101,7 +101,6 @@
                     </li>
                 </ul>
             </section>
-        </main>
       <footer class="footer">
         <address class="address">
             <a href="https://www.google.com/urlsa=t&rct=j&q=&esrc=s&source=web&cd=&ved=2ahUKEwjZ1KeeqvL9AhXumWoFHTuwAtIQFnoECBIQAQ&url=https%3A%2F%2Fwebstudy.pt%2F&usg=AOvVaw30ssXH3MeAgQATn-cXA_QP"
